<resources>
    <string name="app_name" translatable="false">SimpleCalendar</string>

    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>

    <string name="monday_short">Mon</string>
    <string name="tuesday_short">Tue</string>
    <string name="wednesday_short">Wed</string>
    <string name="thursday_short">Thu</string>
    <string name="friday_short">Fri</string>
    <string name="saturday_short">Sat</string>
    <string name="sunday_short">Sun</string>

    <string-array name="activity_reservation_beauty_choose_date_month">
        <item>@string/activity_reservation_beauty_choose_date_month_january</item>
        <item>@string/activity_reservation_beauty_choose_date_month_february</item>
        <item>@string/activity_reservation_beauty_choose_date_month_march</item>
        <item>@string/activity_reservation_beauty_choose_date_month_april</item>
        <item>@string/activity_reservation_beauty_choose_date_month_may</item>
        <item>@string/activity_reservation_beauty_choose_date_month_june</item>
        <item>@string/activity_reservation_beauty_choose_date_month_july</item>
        <item>@string/activity_reservation_beauty_choose_date_month_august</item>
        <item>@string/activity_reservation_beauty_choose_date_month_september</item>
        <item>@string/activity_reservation_beauty_choose_date_month_october</item>
        <item>@string/activity_reservation_beauty_choose_date_month_november</item>
        <item>@string/activity_reservation_beauty_choose_date_month_december</item>
    </string-array>

    <string name="activity_reservation_beauty_choose_date_month_january">January</string>
    <string name="activity_reservation_beauty_choose_date_month_february">February</string>
    <string name="activity_reservation_beauty_choose_date_month_march">March</string>
    <string name="activity_reservation_beauty_choose_date_month_april">April</string>
    <string name="activity_reservation_beauty_choose_date_month_may">May</string>
    <string name="activity_reservation_beauty_choose_date_month_june">June</string>
    <string name="activity_reservation_beauty_choose_date_month_july">July</string>
    <string name="activity_reservation_beauty_choose_date_month_august">August</string>
    <string name="activity_reservation_beauty_choose_date_month_september">September</string>
    <string name="activity_reservation_beauty_choose_date_month_october">October</string>
    <string name="activity_reservation_beauty_choose_date_month_november">November</string>
    <string name="activity_reservation_beauty_choose_date_month_december">December</string>


</resources>
