<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:id="@+id/rlCalendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <RelativeLayout
            android:id="@+id/rlMonthSwitcher"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp">

            <RelativeLayout
                android:id="@+id/rlPreviousPage"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true">

                <ImageView
                    android:id="@+id/ivBackPage"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="7dp"
                    android:scaleType="center"
                    android:src="@drawable/icon_nav_back_dark"
                    tools:ignore="ContentDescription" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlNextPage"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true">

                <ImageView
                    android:id="@+id/ivNextPage"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="7dp"
                    android:rotation="180"
                    android:scaleType="center"
                    android:src="@drawable/icon_nav_back_dark"
                    tools:ignore="ContentDescription" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/rlNextPage"
                android:layout_toRightOf="@id/rlPreviousPage">

                <TextView
                    android:id="@+id/tvMonth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:ellipsize="end"
                    android:fontFamily="@font/roboto_medium"
                    android:letterSpacing="-0.02"
                    android:maxLines="1"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="#363938"
                    android:textSize="14sp"
                    tools:text="October 2018" />

            </RelativeLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlMonths"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rlMonthSwitcher"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp">

            <LinearLayout
                android:id="@+id/llDays"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:weightSum="7">

                <TextView
                    android:id="@+id/tvDay1"
                    style="@style/StyleTitleDay"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/monday_short" />

                <TextView
                    android:id="@+id/tvDay2"
                    style="@style/StyleTitleDay"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/tuesday_short" />

                <TextView
                    android:id="@+id/tvDay3"
                    style="@style/StyleTitleDay"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/wednesday_short" />

                <TextView
                    android:id="@+id/tvDay4"
                    style="@style/StyleTitleDay"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/thursday_short" />

                <TextView
                    android:id="@+id/tvDay5"
                    style="@style/StyleTitleDay"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/friday_short" />

                <TextView
                    android:id="@+id/tvDay6"
                    style="@style/StyleTitleDay"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/saturday_short" />

                <TextView
                    android:id="@+id/tvDay7"
                    style="@style/StyleTitleDay"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/sunday_short" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvMonth1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/llDays"
                android:nestedScrollingEnabled="false"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="7"
                tools:listitem="@layout/item_calendar_day" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvMonth2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/llDays"
                android:nestedScrollingEnabled="false"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="7"
                tools:listitem="@layout/item_calendar_day" />

        </RelativeLayout>

    </RelativeLayout>

</merge>
